# real_world_haskell_playground

./: .gitignore  Makefile  README.md  baby.hs  basic.hs  book_store.hs  hello.hs  interact_with.hs  pc.hs  split_lines.hs  tree.hs  vector.hs
files/: HighestClose.hs
func_prog/: alder32.hs  concat.hs  filter.hs  fold.hs  groupBy.hs  int_parse.hs  lists.hs  mymap.hs  mysum.hs  plus.hs  safe.hs  splitWith.hs  suffix.hs  takeWhile.hs
io/: actions.hs  actions2.hs  basic.hs  filter.hs  input.txt  output.txt  tempfile.hs  toupper-impl.hs  toupper-interact.hs  toupper-lazier.hs  toupper-lazy.hs
json/: .gitignore  Jason.hs  Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  json.hs  mypretty.cabal
monad/: Logger.hs
typeclasses/: JSONClass.hs  color.hs  eqclasses.hs  read.hs
